# django_blog

./: .gitignore  pyproject.toml
janweb_blog/: db.sqlite3  manage.py
janweb_blog/janweb_blog/: asgi.py  settings.py  urls.py  wsgi.py
janweb_blog/main_web/: admin.py  forms.py  models.py  views.py
janweb_blog/main_web/logic/: ArticleManager.py  ArticlePost.py  FileManager.py  SiteUserPrifileMng.py  UserActionsManager.py  UserMng.py
janweb_blog/main_web/migrations/: 0001_initial.py  0002_auto_20210720_1906.py  0002_auto_20210823_1748.py  0002_deletedarticles.py  0003_auto_20210723_2100.py  0003_auto_20210812_1914.py  0003_commentarticle_dislikearticle_dislikearticlecomment_likearticle_likearticlecomment.py  0004_alter_article_options.py  0004_auto_20210725_1543.py  0004_auto_20210823_2236.py  0005_alter_article_options.py  0005_auto_20210824_1415.py  0006_alter_article_text.py  0006_auto_20210824_1420.py  0007_alter_article_short_description.py  0007_auto_20210824_1442.py  0008_alter_article_options.py  0008_alter_article_text.py  0009_alter_article_options.py  0009_alter_article_short_description.py  0010_alter_article_options.py  0010_auto_20210819_1800.py  0011_remove_article_author_profile.py  0012_auto_20210819_1953.py  0013_rename_date_registraton_userprofile_date_registration.py  0014_auto_20210821_1541.py  0015_auto_20210821_1647.py  0016_alter_userprofile_avatar_url.py
janweb_blog/templates/: auth_user_header.html  ex_auth_index.html  fullpost_page.html  index.html  login.html  poste_article.html  registration.html  user_posts_page.html  user_profile.html
(+15 files in other folders)
